<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRecipes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:padding="16dp" />

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:visibility="gone"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvLoadFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/could_not_load_recipes"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:text="@string/try_again"/>
    </LinearLayout>
</ScrollView>